Closed Bug 1865813 Opened 2 years ago Closed 2 years ago

test_trr.js::test_trr_flags fails in Android/verify tests

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox122 --- fixed

People

(Reporter: valentin, Assigned: valentin)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

It seems we are exceeding the timeout for a DoH request.

The TRR request times out in chaos mode so we increase the timeout.

Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/a40bba0f3d71 test_trr.js::test_trr_flags fails in Android/verify tests r=necko-reviewers,kershaw
Regressions: 1866059
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
No longer regressions: 1866059
See Also: → 1866059
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: