Bug 1865813 - test_trr.js::test_trr_flags fails in Android/verify tests r=necko-reviewers,kershaw

The TRR request times out in chaos mode so we increase the timeout.

Differential Revision: https://phabricator.services.mozilla.com/D194222